--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'findbugs'
+apply plugin: 'jacoco'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.mi.activitytest"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -29,9 +29,35 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 //    uiautomator
-    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'org.testng:testng:6.10'
     testImplementation 'org.testng:testng:6.10'
-    androidTestImplementation 'io.appium:java-client:7.1.0'
-    testImplementation 'io.appium:java-client:7.1.0'
+//    androidTestImplementation 'io.appium:java-client:7.1.0'
+//    testImplementation 'io.appium:java-client:7.1.0'
+}
+
+// jacoco
+task jacocoTestReport(type:JacocoReport,dependsOn:"connectedAndroidTest"){//,dependsOn:"connectedAndroidTest"
+    group = "Reporting"
+    description = "Generate Jacoco coverage reports after running tests."
+    reports{
+        xml.enabled = false
+        html.enabled = true
+        csv.enabled = false
+    }
+    classDirectories = fileTree(
+            dir : "${project.rootDir}/app/build/intermediates/javac/debug/compileDebugJavaWithJavac",
+            excludes : [
+                    '**/*Test.class',
+                    '**/R.class',
+                    '**/R$*.class',
+                    '**/BuildConfig.*',
+                    '**/Manifest*.*'
+            ]
+    )
+    def coverageSourceDirs = ['src/main/java']
+    additionalSourceDirs = files(coverageSourceDirs)
+    sourceDirectories = files(coverageSourceDirs)
+    additionalClassDirs = files(coverageSourceDirs)
+//    executionData = files("$buildDir/outputs/code-coverage/connected/coverage.ec")
 }
